# thesiliproject

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  TODO  configure.ac  gpl_snippet  missing
autofiles/: bootstrap.mk
lib/: Makefile.am
lib/m4/: Makefile.am  base.m4  dep.m4  list.m4  make.m4  pod.m4  scsh.m4  shell.m4  vbscript.m4
lib/make/: Makefile.am  env.mk  suffixRules.mk
lib/perl/: Directive.pm  Directive.pm.save  Expander.pm  Makefile.am  Pddoc.pm.xfm  Sili.pm
lib/perl/DB/: DBHandle.pm  DBHandle.pm.xfm  Makefile.am  OracleHandle.pm  OracleHandle.pm.xfm  RowSet.pm  RowSet.pm.xfm
lib/perl/Helpers/: Makefile.am  PerlObject.pm  PerlScript.pm.xfm  TestHelper.pm.xfm  shell.pm  ssh.pm
lib/perl/Sili/: C.pm  Makefile.am  NamedParams.pm  Ness.pm  Pickler.pm  Q.pm
lib/perl/Sili/ERS/: DB.pm  Node.pm  ParallelKey.pm  PidMap.pm  ProcessInfo.pm  Utils.pm
lib/perl/Sili/ERS/DB/: Berkeley.pm
lib/perl/Template/: Makefile.am  SimpleTextArchive.pm.xfm
lib/shell/: Makefile.am  absolutePathTest.src  checkfile.src  cleanup.src  docmd.src  docmdi.src  docmdq.src  docmdqi.src  filesize.src  lock.src  printmsg.src  require.src  shellScripts.m4  transform.sh
src/: Makefile.am  ers.pl  generatePod.pl  getMD.pl  getMD.pl.xfm  keyCleaner.pl  keyCleaner.pl.xfm  m4w.sh.m4  pp.pl  sili.pl  sili.pl.xfm  tarchive.pl  tarchive.pl.xfm  template.pl.xfm  xfmPipe.pl
templates/: Makefile.am  Makefile.tmpl  PerlDBScript.pm.tmpl  PerlObject.pm.tmpl  PerlScript.pm.tmpl  ShellScript.sh.tmpl  SshScript.sh.tmpl  TestMakefile.tmpl  perlTestCase.t.tmpl
tests/: Makefile.am  T-empty.at  atlocal.in  defineScript_test.pl  package.m4  silid.at  silid_1.pl  siliness.at  silis_c_1.pl  testsuite.at
